# spike-sorting-hardware-porting

./: .gitignore  Nazish_Complete_Progress_Report.md  Nazish_Day_By_Day_Task_Tracker.md  Nazish_Project_README.md  README.md
experiments/: README.md  cross_validate_pca.py  pca_quantitative_comparison.py  run_full_remote.exp  run_on_tenstorrent.exp  run_tt_machine.sh  ssh_connect.exp  test_filter_module.py  test_pca_allen_real.py  test_pca_c46_shaped.py  test_pca_module.py  test_pca_simulated_recordings.py  test_pca_tenstorrent.py  test_pca_ttnn_real.py
notes/: README.md  backend_attempt_results.json  day0_alignment.md  day1_baseline_log.md  day2_pipeline_map.md  day3_module_test.md  day4_backend_attempt.md  day5_tenstorrent_execution.md  filter_test_results.json  final_week_summary.md  pca_allen_real_validation.json  pca_c46_shaped_validation.json  pca_quantitative_comparison.json  pca_simulated_recordings_validation.json  pca_test_results.json  pca_transform.onnx  pca_transform.onnx.data  ttnn_real_results.json
torchbci-main/: README.md  pyproject.toml
torchbci-main/demo/: tutorial_jims.ipynb  tutorial_kilosort4.ipynb
torchbci-main/doc/torchbci/: block.html  streaming.html
torchbci-main/doc/torchbci/algorithms/: jims.html  kilosort.html
torchbci-main/doc/torchbci/block/: alignment.html  block.html  clustering.html
torchbci-main/doc/torchbci/streaming/: streaming.html
torchbci-main/torchbci/algorithms/: __init__.py  jims.py  kilosort.py
torchbci-main/torchbci/block/: block.py  functional.py
torchbci-main/torchbci/streaming/: __init__.py
(+127 files in other folders)
